--- a/templates/otp-page.html
+++ b/templates/otp-page.html
@@ -270,7 +270,7 @@
 				fetch("/resendOtp/")
 				.then(res=>res.json())
 				.then(data=>{
-					alert(data["data"])
+					console(data["data"])
 				})
 			}
 		</script>
