--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -402,6 +402,15 @@
                         {%endfor%}
                     </div>
                 </div>
+                <iframe
+                    class="w-full"
+                    height="650px"
+                    src="https://lookerstudio.google.com/embed/reporting/12f40f76-2268-49d7-9f42-d951bab517ba/page/kIV1C"
+                    frameborder="0"
+                    style="border:0"
+                    allowfullscreen
+                    sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"
+                ></iframe>
                 <!-- Departments -->
                 <div class="mt-4 grid grid-cols-12 gap-4 px-[var(--margin-x)] transition-all duration-[.25s] sm:mt-5 sm:gap-5 lg:mt-6 lg:gap-6">
                     <h2 class="text-base md:!w-[500px] w-[300px] font-medium tracking-wide text-slate-700 dark:text-navy-100 lg:text-xl">Departments</h2>
