--- a/templates/map.html
+++ b/templates/map.html
@@ -190,5 +190,6 @@
                 <iframe src="/dashboard/godMode" class="w-full h-[90vh]"></iframe>
             </main>
         </div>
+        {{count}}
     </body>
 </html>
