--- a/templates/admin-events-list.html
+++ b/templates/admin-events-list.html
@@ -229,7 +229,7 @@
                         <div class="flex flex-col justify-center gap-2 pb-2 px-4 sm:px-5">
                             <div>
                                 <p class="text-xs+">Total Registrations</p>
-                                <p class="text-xl font-semibold text-slate-700 dark:text-navy-100">{{value.0}}</p>
+                                <p class="text-xl font-semibold text-slate-700 dark:text-navy-100">{{value.0}} X {{value.6}} = {{value.7}}</p>
                                 <div class="w-full h-[5px] bg-slate-300 rounded relative">
                                     <div class="absolute left-0 top-0 h-full w-[{{value.4}}%] bg-[#6667eb] rounded"></div>
                                 </div>
