--- a/templates/alluminiTicket.html
+++ b/templates/alluminiTicket.html
@@ -13,7 +13,7 @@
             </div>
             <div class="border-2 w-full rounded-tl-none border-l-0 m-4 ml-[40px] overflow-hidden border-black rounded-bl-none grid grid-cols-[30%_1fr] items-center rounded-lg">
                 <div class="p-2 border-white">
-                    <img class="w-full h-full bg-blend-screen" src="https://chart.googleapis.com/chart?chs=256&cht=qr&chl={{data.qrCodeData}}&chld=L|0"></img>
+                    <img class="w-full h-full mix-blend-multiply" src="https://chart.googleapis.com/chart?chs=256&cht=qr&chl={{data.qrCodeData}}&chld=L|0"></img>
                 </div>
                 <div class="flex border-l-8 border-dotted border-[#010A27] flex-col px-2">
                     <div class="grid py-4 lg:grid-cols-[25%_1fr] gap-4 items-center">
